--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link href="./css/main.css" rel="stylesheet" type="text/css">
 <meta name="keywords" content="Yang Li"> 
 <meta name="description" content="Academic homepage of Yang Li">
 <title>Yang Li's personal homepage</title>
