fix case sensitive path for photo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <h1>Yang Li &nbsp;&nbsp; 李洋 </h1>
          </td>
          <td rowspan="4" align="left">
-	      <img src="./files/photo.jpg" border="0" height="250">
+	      <img src="./files/photo.JPG" border="0" height="250">
          </td>
     </tr>   
     <tr>
