finish the context

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="./css/main.css" rel="stylesheet" type="text/css">
+<base target="_blank" />
 <meta name="keywords" content="Yang Li"> 
 <meta name="description" content="Academic homepage of Yang Li">
 <title>Yang Li's personal homepage</title>
@@ -21,8 +22,8 @@
     <tr>
           <td>
                <p><font size="4">M.Sc candidate <br>
-               College of Computer Science<br>
-			         Zhejiang University <br>
+               <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a><br>
+			         <a href="http://www.zju.edu.cn/english/">Zhejiang University</a><br>
                Address: East 402, Cao Guangbiao Building, Yuquan Campus, Hangzhou,China <br>
                Email: liyang89 AT zju dot edu dot cn</font></p>
           </td>       
@@ -37,13 +38,12 @@
 <div><hr></div>
 
 <h3> About me </h3>
-  I am a 2th year M.Sc student supervised by Prof. Jianke Zhu in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://www.ecnu.edu.cn/"> East China Normal University </a>. 
+  I am a 2th year M.Sc student supervised by Prof. Jianke Zhu in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. 
 
 <div><hr></div>
 
 <h3> Research interest </h3>
 I am interested in Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial Intellegence which can help human being step into a better world.
-
 Currently, I am focus on Object Tracking problem. 
 
 <div><hr></div>
@@ -51,7 +51,7 @@ Currently, I am focus on Object Tracking problem.
 <table id="tbPublications" width="100%">
    <tbody><tr>
       <td width="320">
-		<img src="./files/samf/demoimage.png" width="300">			
+		<img src="./files/samf.png" width="300">			
 	  </td>
           <td>
              A Scale Adaptive Kernel Correlation Filter Tracker with Feature Integration <br>
@@ -59,7 +59,9 @@ Currently, I am focus on Object Tracking problem.
           
               <i>European Conference on Computer Vision, Workshop VOT2014</i> (ECCVW), 2014.<br>
                  [<a href="./files/samf/samf.pdf">PDF</a>]
-                 [<a href="./files/samf/samf_release1.zip">Code</a>]
+                 [<a href="./files/samf/samf_release1.zip">Code</a>] <br>
+                 We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.
+
           </td>
    </tr>
 
