modify the samf link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div><hr></div>
 <h3>What's New</h3>
 <ul>     
-	<li> 2015-2.  Code of our ECCV Workshop 2014 paper is available. Click <a href="./files/samf/samf_release1.zip">here</a> to download.
+	<li> 2015-2.  Code of our ECCV Workshop 2014 paper is available. Click <a href="https://github.com/ihpdep/samf">here</a> to download.
 </li></ul>
 <div><hr></div>
 
@@ -59,7 +59,7 @@ Currently, I am focus on Object Tracking problem.
           
               <i>European Conference on Computer Vision, Workshop VOT2014</i> (ECCVW), 2014.<br>
                  [<a href="./files/samf/samf.pdf">PDF</a>]
-                 [<a href="./files/samf/samf_release1.zip">Code</a>] <br>
+                 [<a href="https://github.com/ihpdep/samf">Code</a>] <br>
                  We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.
 
           </td>
