--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div><hr></div>
 
 <h3> About me </h3>
-  I am a 2th year M.Sc student supervised by Prof. Jianke Zhu in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. 
+  I am a 2th year M.Sc student supervised by Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a> in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. 
 
 <div><hr></div>
 
