update hoi's homepage

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Currently, I am focus on Object Tracking problem.
 	  </td>
           <td>
              Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches <br>
-             <b>Yang Li</b>, <a href="http://jkzhu.github.io/">Jianke Zhu</a>, <a href="http://stevenhoi.org/">Steven C.H. Hoi</a><br>
+             <b>Yang Li</b>, <a href="http://jkzhu.github.io/">Jianke Zhu</a>, <a href="http://www.mysmu.edu.sg/faculty/chhoi/index.html">Steven C.H. Hoi</a><br>
           
               <i>Computer Vision and Pattern Recognization</i> (CVPR), 2015 (Accepted).<br>
                  [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
