--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@ Currently, I am focus on Object Tracking problem.
 
 <br><br><br>
 <center>
-<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://ihpdep.github.io', 'user' : 1165375, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-04-02', 'lang' : 'zh', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/2a911c83f"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/ihpdep.github.io-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
-
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
 
 </center>
 
