--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table id="tbInformation" width="100%">
     <tbody><tr>
-         <td width="480">
+         <td width="400">
          <h1>Yang Li &nbsp;&nbsp; 李洋 </h1>
          </td>
          <td rowspan="4" align="left">
@@ -21,11 +21,12 @@
     </tr>   
     <tr>
           <td>
-               M.Sc candidate <br>
+               <p class="info">M.Sc candidate <br>
                <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a><br>
 			         <a href="http://www.zju.edu.cn/english/">Zhejiang University</a><br>
-               Address: East 402, Cao Guangbiao Building, Yuquan Campus, Hangzhou,China <br>
-               Email: liyang89 AT zju DOT edu DOT cn
+               Address: East 402, Cao Guangbiao Building, <br>
+               Yuquan Campus, Hangzhou,China <br>
+               Email: liyang89 AT zju DOT edu DOT cn</P>
           </td>       
     </tr>
 </tbody></table>
@@ -41,7 +42,8 @@
 </li>
 </ul>
 <div><hr></div>-->
-
+<table id="tbInformation" width="100%">
+    <tbody><tr>
 <h3> About me </h3>
   I am a 3th year M.Sc student supervised by Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a> in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. 
 
@@ -56,7 +58,7 @@ Currently, I am very interested in how to find links between frames which lies a
 
 <p class="pub">
 <b>Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches</b> <br>
-Yang Li, <a href="http://jkzhu.github.io/">Jianke Zhu</a>, <a href="http://www.mysmu.edu.sg/faculty/chhoi/index.html">Steven C.H. Hoi</a><br>
+Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
 
 <i>Computer Vision and Pattern Recognization</i> (CVPR), 2015 (Accepted).<br>
    [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
@@ -65,6 +67,13 @@ Yang Li, <a href="http://jkzhu.github.io/">Jianke Zhu</a>, <a href="http://www.m
    <br>
    
 </p>
+
+<p class="pub">
+<b>Image Alignment by Online Robust PCA via Stochastic Gradient Descent</b><br>
+Wenjie Song, Jianke Zhu,  Yang Li, Chun Chen.   <br>
+<i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT). DOI: 10.1109/TCSVT.2015.2455711.<br>
+</p>
+
 <p class="pub">
 <b>A Scale Adaptive Kernel Correlation Filter Tracker with Feature Integration </b><br>
 Yang Li, Jianke Zhu<br>
@@ -75,33 +84,32 @@ Yang Li, Jianke Zhu<br>
    We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.
 </p>
 
-
-<p class="pub">
-<b>Image Alignment by Online Robust PCA via Stochastic Gradient Descent</b><br>
-Wenjie Song, Jianke Zhu,  Yang Li, Chun Chen.   <br>
-<i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT). DOI: 10.1109/TCSVT.2015.2455711.<br>
-</p>
-
 <p class="pub">
 <b>The visual object tracking vot2014 challenge results. </b><br>
 M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
 <i>In ECCV2014 Workshops, Workshop on Visual Object Tracking Challenge 2014.</i> <br>
 </p>
+
 <p class="pub">
 <b>The visual object tracking vot2013 challenge results. </b><br>
 M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
 <i>In ICCV2013 Workshops, Workshop on Visual Object Tracking Challenge 2013.</i> <br>
 </p>
+
 <p class="pub">
 <b>Adaptive lattice-based light rendering of participating media. </b><br>
 Changbo Wang, Chenhui Li, Jinqiu Dai,{\bf Yang Li}: <br>
 <i>Journal of Computer Animation and Virtual World</i> 22(6): 487-498 (2011).  
 </p>
+
  <p class="pub">
 <b>Real-time realistic rendering of under seawater scene. </b><br>
  Chenhui Li, Changbo Wang,{\bf Yang Li}, Min Zhao, et al.<br>
  <i>Journal of Image and Graphics.</i> 2011.16(8):1497-1502.<br>
 </p>
+
+    </tr>
+</tbody></table>
 <br><br><br>
 <center>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
