update pdf links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Currently, I am very interested in how to find links between frames which lies a
 <b>Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches</b> <br>
 Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
 
-<i>Computer Vision and Pattern Recognization</i> (CVPR), 2015 (Accepted).<br>
+<i>Computer Vision and Pattern Recognization</i> (CVPR), 2015<br>
    [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
    [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
    [<a href="https://github.com/ihpdep/rpt">CODE</a>] 
@@ -71,7 +71,8 @@ Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
 <p class="pub">
 <b>Image Alignment by Online Robust PCA via Stochastic Gradient Descent</b><br>
 Wenjie Song, Jianke Zhu,  Yang Li, Chun Chen.   <br>
-<i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT). DOI: 10.1109/TCSVT.2015.2455711.<br>
+<i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT), 2015<br>
+[<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7155543">PDF</a>]
 </p>
 
 <p class="pub">
@@ -81,31 +82,36 @@ Yang Li, Jianke Zhu<br>
 <i>European Conference on Computer Vision, Workshop VOT2014</i> (ECCVW), 2014.<br>
    [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/eccvw14_samf.pdf">PDF</a>]
    [<a href="https://github.com/ihpdep/samf">CODE</a>] 
-   We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.
+   
 </p>
 
 <p class="pub">
 <b>The visual object tracking vot2014 challenge results. </b><br>
 M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
-<i>In ECCV2014 Workshops, Workshop on Visual Object Tracking Challenge 2014.</i> <br>
-</p>
+<i>In ECCV 2014 Workshops, Workshop on Visual Object Tracking Challenge</i> 2014 <br>
+[<a href="http://www.epics-project.eu/publications/2014_kristan_iccvw.pdf">PDF</a>]
+We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.</p>
 
 <p class="pub">
 <b>The visual object tracking vot2013 challenge results. </b><br>
 M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
-<i>In ICCV2013 Workshops, Workshop on Visual Object Tracking Challenge 2013.</i> <br>
+<i>In ICCV 2013 Workshops, Workshop on Visual Object Tracking Challenge</i> 2013 <br>
+[<a href="http://personal.ee.surrey.ac.uk/Personal/R.Bowden/publications/2013/Kristan_VOT_2013_ICCV_paper.pdf">PDF</a>]
 </p>
 
 <p class="pub">
 <b>Adaptive lattice-based light rendering of participating media. </b><br>
-Changbo Wang, Chenhui Li, Jinqiu Dai,{\bf Yang Li}: <br>
-<i>Journal of Computer Animation and Virtual World</i> 22(6): 487-498 (2011).  
+Changbo Wang, Chenhui Li, Jinqiu Dai, Yang Li <br>
+<i>Journal of Computer Animation and Virtual World</i> 22(6): 487-498 (2011). <br> 
+[<a href="http://onlinelibrary.wiley.com/doi/10.1002/cav.426/pdf">PDF</a>]
+
 </p>
 
  <p class="pub">
 <b>Real-time realistic rendering of under seawater scene. </b><br>
- Chenhui Li, Changbo Wang,{\bf Yang Li}, Min Zhao, et al.<br>
+ Chenhui Li, Changbo Wang, Yang Li, Min Zhao, et al.<br>
  <i>Journal of Image and Graphics.</i> 2011.16(8):1497-1502.<br>
+ [<a href="http://en.cnki.com.cn/Article_en/CJFDTotal-ZGTB201108022.htm">PDF</a>]
 </p>
 
     </tr>
