--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 			         <a href="http://www.zju.edu.cn/english/">Zhejiang University</a><br>
                Address: East 402, Cao Guangbiao Building, <br>
                Yuquan Campus, Hangzhou,China <br>
-               Email: liyang89 AT zju DOT edu DOT cn</P>
+               Email: liyang89 AT zju DOT edu DOT cn<br>
+               <!--<a href="./files/cv_yangli.pdf">Curriculum Vitae</P>-->
           </td>       
     </tr>
 </tbody></table>
