--- a/index.html
+++ b/index.html
@@ -1,126 +1,159 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link href="./css/main.css" rel="stylesheet" type="text/css">
-<base target="_blank" />
-<meta name="keywords" content="Yang Li"> 
-<meta name="description" content="Academic homepage of Yang Li">
-<title>Yang Li's personal homepage</title>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" content="Yang Li">
+    <meta name="description" content="Academic homepage of Yang Li">
+    <meta name="viewport" content="width=device-wdith; initial-scale=1.0;">
+    <title>Yang Li's personal homepage</title>
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
 </head>
-
 <body>
+    <div class="container">
+        <header class="row">
+            <div class="myinfo col-8 col-sm-6 col-xs-12">
+                <h1>Yang Li &nbsp;&nbsp; 李洋</h1>
+                <h2>M.Sc candidate</h2>
+                <p>
+                    <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a>
+                </p>
+                <p>
+                    <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>
+                </p>
+                <p>
+                    Address: East 402, Cao Guangbiao Building,
+                </p>
+                <p>
+                    Yuquan Campus, Hangzhou,China
+                </p>
+                <p>
+                    Email: liyang89 AT zju DOT edu DOT cn
+                </p>
+            </div>
+            <div class="col-4 col-sm-6 col-xs-12">
+                <img class="portrait img-responsive" src="files/photo.JPG">
+            </div>
+        </header>
+        <div class="row">
+            <div class="col-12 col-sm-12 col-xs-12">
+                <hr>
+            </div>
+        </div>
+        <main>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <h3>About Me</h3>
+                    <p>
+                        I am a 3th year M.Sc student supervised by Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a> in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <h3>Research Interest</h3>
+                    <p>
+                        I am interested in Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial Intellegence which can help human being step into a better world.
+                        Currently, I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <h3>Publications</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches</b> <br>
+                    Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
 
-<table id="tbInformation" width="100%">
-    <tbody><tr>
-         <td width="400">
-         <h1>Yang Li &nbsp;&nbsp; 李洋 </h1>
-         </td>
-         <td rowspan="4" align="left">
-	      <img src="./files/photo.JPG" border="0" height="250">
-         </td>
-    </tr>   
-    <tr>
-          <td>
-               <p class="info">M.Sc candidate <br>
-               <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a><br>
-			         <a href="http://www.zju.edu.cn/english/">Zhejiang University</a><br>
-               Address: East 402, Cao Guangbiao Building, <br>
-               Yuquan Campus, Hangzhou,China <br>
-               Email: liyang89 AT zju DOT edu DOT cn<br>
-               <!--<a href="./files/cv_yangli.pdf">Curriculum Vitae</P>-->
-          </td>       
-    </tr>
-</tbody></table>
+                    <i>Computer Vision and Pattern Recognization</i> (CVPR), 2015<br>
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
+                       [<a href="https://github.com/ihpdep/rpt">CODE</a>]
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>Image Alignment by Online Robust PCA via Stochastic Gradient Descent</b><br>
+                    Wenjie Song, Jianke Zhu,  Yang Li, Chun Chen.   <br>
+                    <i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT), 2015<br>
+                    [<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7155543">PDF</a>]
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>A Scale Adaptive Kernel Correlation Filter Tracker with Feature Integration </b><br>
+                    Yang Li, Jianke Zhu<br>
 
-<div><hr></div>
-<!--<h3>What's New</h3>
-<ul>     
-  <li> 2015-5.  RPT paper and code is published.
-</li>
-<li> 2015-3.  One paper is accepted in CVPR 2015.
-</li>
-	<li> 2015-2.  Code of our ECCV Workshop 2014 paper is available. Click <a href="https://github.com/ihpdep/samf">here</a> to download.
-</li>
-</ul>
-<div><hr></div>-->
-<table id="tbInformation" width="100%">
-    <tbody><tr>
-<h3> About me </h3>
-  I am a 3th year M.Sc student supervised by Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a> in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. 
-
-<div><hr></div>
-
-<h3> Research interest </h3>
-I am interested in Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial Intellegence which can help human being step into a better world.
-Currently, I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level to high level, like optical flow, video segmentation, object tracking and scene understanding.
-
-<div><hr></div>
-<h3> Publications </h3> 
-
-<p class="pub">
-<b>Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches</b> <br>
-Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
-
-<i>Computer Vision and Pattern Recognization</i> (CVPR), 2015<br>
-   [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
-   [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
-   [<a href="https://github.com/ihpdep/rpt">CODE</a>] 
-   <br>
-   
-</p>
-
-<p class="pub">
-<b>Image Alignment by Online Robust PCA via Stochastic Gradient Descent</b><br>
-Wenjie Song, Jianke Zhu,  Yang Li, Chun Chen.   <br>
-<i>IEEE Transactions on Circuits and Systems for Video Technology</i> (TCSVT), 2015<br>
-[<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7155543">PDF</a>]
-</p>
-
-<p class="pub">
-<b>A Scale Adaptive Kernel Correlation Filter Tracker with Feature Integration </b><br>
-Yang Li, Jianke Zhu<br>
-
-<i>European Conference on Computer Vision, Workshop VOT2014</i> (ECCVW), 2014.<br>
-   [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/eccvw14_samf.pdf">PDF</a>]
-   [<a href="https://github.com/ihpdep/samf">CODE</a>] 
-   
-</p>
-
-<p class="pub">
-<b>The visual object tracking vot2014 challenge results. </b><br>
-M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
-<i>In ECCV 2014 Workshops, Workshop on Visual Object Tracking Challenge</i> 2014 <br>
-[<a href="http://www.epics-project.eu/publications/2014_kristan_iccvw.pdf">PDF</a>]
-We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.</p>
-
-<p class="pub">
-<b>The visual object tracking vot2013 challenge results. </b><br>
-M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
-<i>In ICCV 2013 Workshops, Workshop on Visual Object Tracking Challenge</i> 2013 <br>
-[<a href="http://personal.ee.surrey.ac.uk/Personal/R.Bowden/publications/2013/Kristan_VOT_2013_ICCV_paper.pdf">PDF</a>]
-</p>
-
-<p class="pub">
-<b>Adaptive lattice-based light rendering of participating media. </b><br>
-Changbo Wang, Chenhui Li, Jinqiu Dai, Yang Li <br>
-<i>Journal of Computer Animation and Virtual World</i> 22(6): 487-498 (2011). <br> 
-[<a href="http://onlinelibrary.wiley.com/doi/10.1002/cav.426/pdf">PDF</a>]
-
-</p>
-
- <p class="pub">
-<b>Real-time realistic rendering of under seawater scene. </b><br>
- Chenhui Li, Changbo Wang, Yang Li, Min Zhao, et al.<br>
- <i>Journal of Image and Graphics.</i> 2011.16(8):1497-1502.<br>
- [<a href="http://en.cnki.com.cn/Article_en/CJFDTotal-ZGTB201108022.htm">PDF</a>]
-</p>
-
-    </tr>
-</tbody></table>
-<br><br><br>
-<center>
+                    <i>European Conference on Computer Vision, Workshop VOT2014</i> (ECCVW), 2014.<br>
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/eccvw14_samf.pdf">PDF</a>]
+                       [<a href="https://github.com/ihpdep/samf">CODE</a>]
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>The visual object tracking vot2014 challenge results. </b><br>
+                    M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
+                    <i>In ECCV 2014 Workshops, Workshop on Visual Object Tracking Challenge</i> 2014 <br>
+                    [<a href="http://www.epics-project.eu/publications/2014_kristan_iccvw.pdf">PDF</a>]
+                    We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>The visual object tracking vot2013 challenge results. </b><br>
+                    M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
+                    <i>In ICCV 2013 Workshops, Workshop on Visual Object Tracking Challenge</i> 2013 <br>
+                    [<a href="http://personal.ee.surrey.ac.uk/Personal/R.Bowden/publications/2013/Kristan_VOT_2013_ICCV_paper.pdf">PDF</a>]
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>Adaptive lattice-based light rendering of participating media. </b><br>
+                    Changbo Wang, Chenhui Li, Jinqiu Dai, Yang Li <br>
+                    <i>Journal of Computer Animation and Virtual World</i> 22(6): 487-498 (2011). <br>
+                    [<a href="http://onlinelibrary.wiley.com/doi/10.1002/cav.426/pdf">PDF</a>]
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>Real-time realistic rendering of under seawater scene. </b><br>
+                     Chenhui Li, Changbo Wang, Yang Li, Min Zhao, et al.<br>
+                     <i>Journal of Image and Graphics.</i> 2011.16(8):1497-1502.<br>
+                     [<a href="http://en.cnki.com.cn/Article_en/CJFDTotal-ZGTB201108022.htm">PDF</a>]
+                    </p>
+                </div>
+            </div>
+        </main>
+    </div>
+    <center>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
 
 </center>
-
 </body></html>
