--- a/index.html
+++ b/index.html
@@ -150,10 +150,19 @@
                     </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <hr>
+                </div>
+            </div>
+            
+            <center>
+            <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
+
+            </center>
+
         </main>
     </div>
-    <center>
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
 
-</center>
+
 </body></html>
