--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
+	<base target="_blank">
 </head>
 <body>
     <div class="container">
@@ -32,6 +33,7 @@
                 <p>
                     Email: liyang89 AT zju DOT edu DOT cn
                 </p>
+				<p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv_liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
             </div>
             <div class="col-4 col-sm-6 col-xs-12">
                 <img class="portrait img-responsive" src="files/photo.JPG">
@@ -47,7 +49,7 @@
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>About Me</h3>
                     <p>
-                        I am a 3th year M.Sc student supervised by Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a> in Internet Vision Group. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>.
+                        I am a 3rd year M.Sc student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. Currently, I am looking for a Ph.D. position.
                     </p>
                 </div>
             </div>
@@ -60,7 +62,7 @@
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>Research Interest</h3>
                     <p>
-                        I am interested in Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial Intellegence which can help human being step into a better world.
+                        My research interest are in the areas of Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial intelligence which can help human being step into a better world.
                         Currently, I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding.
                     </p>
                 </div>
