--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <b>Reliable Patch Trackers: Robust Visual Tracking by Exploiting Reliable Patches</b> <br>
                     Yang Li, Jianke Zhu, Steven C.H. Hoi<br>
 
-                    <i>Computer Vision and Pattern Recognization</i> (CVPR), 2015<br>
+                    <i>Computer Vision and Pattern Recognition</i> (CVPR), 2015<br>
                        [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
                        [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
                        [<a href="https://github.com/ihpdep/rpt">CODE</a>]
