--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="row">
             <div class="myinfo col-8 col-sm-6 col-xs-12">
                 <h1>Yang Li &nbsp;&nbsp; 李洋</h1>
-                <h2>M.Sc candidate</h2>
+                <h2>Ph.D. candidate</h2>
                 <p>
                     <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a>
                 </p>
@@ -49,7 +49,7 @@
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>About Me</h3>
                     <p>
-                        I am a 3rd year M.Sc student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. Currently, I am looking for a Ph.D. position.
+                        I am a 1st year Ph.D. student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. Currently, I am looking for a Ph.D. position.
                     </p>
                 </div>
             </div>
