--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>
                 </p>
                 <p>
-                    Address: East 402, Cao Guangbiao Building,
+                    Address: RM 101, Zetong Building,
                 </p>
                 <p>
                     Yuquan Campus, Hangzhou,China
