--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
                     <h3>Publications</h3>
                 </div>
             </div>
+		<div class="row">
+                <div class="col-12 col-sm-12 col-xs-12">
+                    <p class="pub">
+                    <b>CFNN: Correlation Filter Neural Network for Visual Object Tracking</b> <br>
+                    Yang Li, Zhan Xu and Jianke Zhu<br>
+
+                    <i>International Joint Conference on Artificial Intelligence</i> (IJCAI), 2017<br>
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
+                       [<a href="https://github.com/ihpdep/rpt">CODE</a>]
+                    </p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12">
                     <p class="pub">
