--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
                     Yang Li, Zhan Xu and Jianke Zhu<br>
 
                     <i>International Joint Conference on Artificial Intelligence</i> (IJCAI), 2017<br>
-                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt.pdf">PDF</a>]
-                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/cvpr15_rpt_ext.pdf">ABSTRACT</a>]
-                       [<a href="https://github.com/ihpdep/rpt">CODE</a>]
+                       [Coming soon]
                     </p>
                 </div>
             </div>
