--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>About Me</h3>
                     <p>
-                        I am a 1st year Ph.D. student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>. Currently, I am looking for a Ph.D. position.
+                        I am a 1st year Ph.D. student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>.
                     </p>
                 </div>
             </div>
