--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>About Me</h3>
                     <p>
-                        I am a 1st year Ph.D. student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>.
+                        I am a 1st year Ph.D. student in Internet Vision Group at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under the supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a>.
                     </p>
                 </div>
             </div>
@@ -61,10 +61,11 @@
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12">
                     <h3>Research Interest</h3>
-                    <p>
-                        My research interest are in the areas of Computer Vision and Machine Learning. I believe that these fields are the directions leading to true Artificial intelligence which can help human being step into a better world.
-                        Currently, I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding.
-                    </p>
+                    	<p>
+                        My research interests are in the areas of Computer Vision and Machine Learning. 
+			I believe that these fields are the directions leading to true Artificial intelligence which can help the human being stepped into a better world. 
+			Currently, I am very interested in how to find links between frames which lie at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high-level scene understanding.
+			</p>
                 </div>
             </div>
             <div class="row">
@@ -84,7 +85,8 @@
                     Yang Li, Zhan Xu and Jianke Zhu<br>
 
                     <i>International Joint Conference on Artificial Intelligence</i> (IJCAI), 2017<br>
-                       [Coming soon]
+                       [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/ijcai17_cfnn.pdf">PDF</a>]
+			[<a href="https://github.com/enderhsu/CFNN">CODE</a>]
                     </p>
                 </div>
             </div>
