--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h3>About Me</h3>
                     <p>
 
-                        I am a 2nd year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. Currently, I am looking for a visiting scholar position.
+                        I am a 2nd year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. Currently, I am looking for a visiting scholar position.
                     </p>
                 </div>
             </div>
