--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p class="pub">
                         <b>Robust Estimation of Similarity Transformation for Visual Object Tracking with Correlation Filters</b> <br>
                         Yang Li, Jianke Zhu, Wenjie Song, Zhefeng Wang, Hantang Liu, Steven C.H. Hoi<br>
-                        <i>arXiv, 2017<br>
+                        <i>arXiv</i>, 2017<br>
                             [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
 			                      [CODE (coming soon)]
                     </p>
