add neurocomputing 2018 paper

--- a/index.html
+++ b/index.html
@@ -86,11 +86,22 @@
                         <b>Robust Estimation of Similarity Transformation for Visual Object Tracking with Correlation Filters</b> <br>
                         Yang Li, Jianke Zhu, Wenjie Song, Zhefeng Wang, Hantang Liu, Steven C.H. Hoi<br>
                         <i>arXiv</i>, 2017<br>
-                            [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
-			                      [CODE (coming soon)]
+                        [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
+			                  [CODE (coming soon)]
                     </p>
                 </div>
        </div>
+		   <div class="row">
+           <div class="col-12 col-sm-12 col-xs-12">
+               <p class="pub">
+                   <b>Temporally-Adjusted Correlation Filter-based Tracking</b> <br>
+                   Wenjie Song, Yang Li, Jianke Zhu, Chun Chen<br>
+                   <i>arXiv</i>, 2017<br>
+                   [<a href="https://www.sciencedirect.com/science/article/pii/S0925231218301000">PDF</a>]
+               </p>
+           </div>
+       </div>
+       https://www.sciencedirect.com/science/article/pii/S0925231218301000
        <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12">
                     <p class="pub">
