--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                <p class="pub">
                    <b>Temporally-Adjusted Correlation Filter-based Tracking</b> <br>
                    Wenjie Song, Yang Li, Jianke Zhu, Chun Chen<br>
-                   <i>arXiv</i>, 2017<br>
+                   <i>Neurocomputing</i>, 2018<br>
                    [<a href="https://www.sciencedirect.com/science/article/pii/S0925231218301000">PDF</a>]
                </p>
            </div>
