update index for aaai2019

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h3>About Me</h3>
                     <p>
 
-                        I am a 2nd year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. Currently, I am looking for a visiting scholar position.
+                        I am a 3rd year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. Currently, I am visiting Prof. <a href="https://sites.google.com/site/mikeyip1/"> Michael Yip</a>'s <a href="https://www.ucsdarclab.com">ARClab</a> at UCSD.
                     </p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
 
                     <p>
                         My research interests are in the areas of Computer Vision and Machine Learning and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                        I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding. Currently, my focus is on model-free single object tracking.
+                        I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding. Currently, my focus is on model-free single object tracking and how to apply vision methods into robotic area.
                     </p>
 
                 </div>
@@ -83,11 +83,11 @@
 		   <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12">
                     <p class="pub">
-                        <b>Robust Estimation of Similarity Transformation for Visual Object Tracking with Correlation Filters</b> <br>
-                        Yang Li, Jianke Zhu, Wenjie Song, Zhefeng Wang, Hantang Liu, Steven C.H. Hoi<br>
-                        <i>arXiv</i>, 2017<br>
-                        [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
-			                  [CODE (coming soon)]
+                        <b>Robust Estimation of Similarity Transformation for Visual Object Tracking</b> <br>
+                        Yang Li, Jianke Zhu, Steven C.H. Hoi, Wenjie Song, Zhefeng Wang, Hantang Liu, <br>
+                        <i>AAAI Conference on Artificial Intelligence (AAAI)</i>, 2019<br>
+                        [PDF]
+			                  [CODE]
                     </p>
                 </div>
        </div>
