--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
                             <b>Robust Estimation of Similarity Transformation for Visual Object Tracking</b> <br>
                             Yang Li, Jianke Zhu, Steven C.H. Hoi, Wenjie Song, Zhefeng Wang, Hantang Liu, <br>
                             <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI)</i>, 2019<br>
-                            [PDF]
+                            [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
 			                      [<a href="https://github.com/ihpdep/LDES">CODE</a>]
+                            [Project Webpage]
                         </p>
                     </div>
                 </div>
