--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     <p>
                         Email: liyang89 AT zju DOT edu DOT cn
                     </p>
+                    <p>
+                        OR yal055 AT ucsd DOT edu
+                    </p>
+
 				            <p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv-liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
