--- a/index.html
+++ b/index.html
@@ -87,8 +87,19 @@
 		            <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
+                            <b>SuPer: A Surgical Perception Framework for Endoscopic Tissue Manipulation with Surgical Robotics</b> <br>
+                            Yang Li, Florian Richter, Jingpei Lu, Emily K. Funk, Ryan K. Orosco, Jianke Zhu and Michael C. Yip<br>
+                            <i>ArXiv</i><br>
+                            [PDF]
+			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+		            <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
                             <b>Robust Estimation of Similarity Transformation for Visual Object Tracking</b> <br>
-                            Yang Li, Jianke Zhu, Steven C.H. Hoi, Wenjie Song, Zhefeng Wang, Hantang Liu, <br>
+                            Yang Li, Jianke Zhu, Steven C.H. Hoi, Wenjie Song, Zhefeng Wang, Hantang Liu<br>
                             <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI)</i>, 2019<br>
                             [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
 			                      [<a href="https://github.com/ihpdep/LDES">CODE</a>]
