--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <b>SuPer: A Surgical Perception Framework for Endoscopic Tissue Manipulation with Surgical Robotics</b> <br>
                             Yang Li, Florian Richter, Jingpei Lu, Emily K. Funk, Ryan K. Orosco, Jianke Zhu and Michael C. Yip<br>
                             <i>ArXiv</i>, 2019<br>
-                            [PDF]
+                            [<a href="https://arxiv.org/abs/1909.05405">PDF</a>]
 			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
                         </p>
                     </div>
