--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
                     <p>
                         Email: liyang89 AT zju DOT edu DOT cn
                     </p>
-                    <p>
-                        OR yal055 AT ucsd DOT edu
-                    </p>
-
-				            <p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv-liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
+                   				            <p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv-liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
                     <img class="portrait img-responsive" src="files/photo.JPG">
@@ -54,7 +50,7 @@
                         <h3>About Me</h3>
                         <p>
 
-                            I am a 3rd year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. Currently, I am visiting Prof. <a href="https://sites.google.com/site/mikeyip1/"> Michael Yip</a>'s <a href="https://www.ucsdarclab.com">Advanced Robotics and Controls Lab (ARClab)</a> at <a href="https://ucsd.edu">University of California, San Diego</a>.
+                            I am a 4th year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. In 2018, I was visiting Prof. <a href="https://sites.google.com/site/mikeyip1/"> Michael Yip</a>'s <a href="https://www.ucsdarclab.com">Advanced Robotics and Controls Lab (ARClab)</a> at <a href="https://ucsd.edu">University of California, San Diego</a>.
                         </p>
                     </div>
                 </div>
