--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
                         <p class="pub">
                             <b>SuPer: A Surgical Perception Framework for Endoscopic Tissue Manipulation with Surgical Robotics</b> <br>
                             Yang Li, Florian Richter, Jingpei Lu, Emily K. Funk, Ryan K. Orosco, Jianke Zhu and Michael C. Yip<br>
-                            <i>ArXiv</i>, 2019<br>
+                            <i>IEEE Robotics and Automation Letters</i>, 2020<br>
                             [<a href="https://arxiv.org/abs/1909.05405">PDF</a>]
 			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>DeepFacade: A deep learning approach to facade parsing with symmetric loss</b> <br>
+                            Hantang Liu, Yinghao Xu, Jialiang Zhang, Jianke Zhu, Yang Li, Steve C.H. Hoi<br>
+                            <i>IEEE Trans. Multimedia</i>, 2020<br>
                         </p>
                     </div>
                 </div>
