--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
                         <h3>Publications</h3>
                     </div>
                 </div>
-		            <div class="row">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>SuPer Deep: A Surgical Perception Framework for Robotic Tissue Manipulation using Deep Learning for Feature Extraction</b> <br>
+                            Jingpei Lu, Ambareesh Jayakumari, Florian Richter, Yang Li and Michael C. Yip<br>
+                            <i>Arxiv</i>, 2020<br>
+                            [<a href="https://arxiv.org/abs/2003.03472">PDF</a>]
+			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+		        <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>SuPer: A Surgical Perception Framework for Endoscopic Tissue Manipulation with Surgical Robotics</b> <br>
