--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
                         </p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>Attribute-aware Pedestrian Detection in a Crowd</b> <br>
+                            Jialiang Zhang, Lixiang Lin, Yang Li, Yun-chen Chen, Jianke Zhu, Yao Hu, Steven C.H. Hoi<br>
+                            <i>Arxiv</i>, 2020<br>
+                            [<a href="https://arxiv.org/abs/1910.09188">PDF</a>]
+			                      [<a href="https://github.com/kalyo-zjl/APD">CODE</a>]
+                        </p>
+                    </div>
+                </div>
 		        <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
