--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                    				            <p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv-liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
-                    <img class="portrait img-responsive" src="files/photo.JPG">
+                    <img class="portrait img-responsive" src="files/photo-new.jpg">
                 </div>
             </header>
             <div class="row">
@@ -49,8 +49,7 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>About Me</h3>
                         <p>
-
-                            I am a 4th year Ph.D. candidate in <a href="http://www.smartvisionlab.org">Smart Vision Lab</a> at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a> under supervision of Prof.  <a href="http://jkzhu.github.io/">Jianke Zhu</a>. Before that, I received my Bachelor degree in Software Engineering from  <a href="http://english.ecnu.edu.cn/"> East China Normal University </a> and Master degree in College of Computer Science from Zhejiang University in 2016. In 2018, I was visiting Prof. <a href="https://sites.google.com/site/mikeyip1/"> Michael Yip</a>'s <a href="https://www.ucsdarclab.com">Advanced Robotics and Controls Lab (ARClab)</a> at <a href="https://ucsd.edu">University of California, San Diego</a>.
+                            I am a final-year Ph.D. candidate at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>, and my Ph.D. supervisor is Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I was working with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> and visiting at the <a href="https://ucsd.edu">University of California, San Diego</a>. Since 2017, I've been working as a part-time researcher at the <a href="https://azft.alibaba.com/lab/?id=1">Computer Vision and Video Analysis Lab, AZFT</a>. Before this, I received my Bachelor's degree in Software Engineering from <a href="http://english.ecnu.edu.cn/">East China Normal University</a> (2007-2011) and a Master's degree in the College of Computer Science from Zhejiang University (2013-2016).
                         </p>
                     </div>
                 </div>
@@ -62,10 +61,10 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>Research Interest</h3>
-
                         <p>
                             My research interests are in the areas of Computer Vision and Machine Learning and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                            I am very interested in how to find links between frames which lies at the intersection among many topics, from low-level like optical flow, video segmentation, object tracking and to high level scene understanding. Currently, my focus is on model-free single object tracking and how to apply vision methods into robotic area.
+                            I am also very interested in finding and defining temporal information between video frames to provide visual perception for cross-disciplinary researches.
+                            Currently, my focus is on model-free single object tracking and 3D reconstruction/fusion.
                         </p>
 
                     </div>
