--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="container">
             <header class="row">
                 <div class="myinfo col-8 col-sm-6 col-xs-12">
-                    <h1>Yang Li &nbsp;&nbsp; 李洋</h1>
-                    <h2>Ph.D. candidate</h2>
-                    <p>
+                    <h1>Yang Li, Ph.D.  </h1>
+                    <h1>李&nbsp;&nbsp;洋</h1>
+                    <!-- <p>
                         <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a>
                     </p>
                     <p>
                         <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>
-                    </p>
+                    </p> -->
                     <p>
                         Address: RM 101, Zetong Building,
                     </p>
@@ -49,7 +49,11 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>About Me</h3>
                         <p>
-                            I am a final-year Ph.D. candidate at <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>, and my Ph.D. supervisor is Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I was working with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> and visiting at the <a href="https://ucsd.edu">University of California, San Diego</a>. Since 2017, I've been working as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a>. Besides, I received my Bachelor's degree in Software Engineering from <a href="http://english.ecnu.edu.cn/">East China Normal University</a> (2007-2011) and spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a> (2010-2012) before my Master's degree in the College of Computer Science from Zhejiang University (2013-2016). 
+                            I am going to join the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a> as  an associate professor this October.
+                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>. 
+                        </p>
+                        <p style="color:red;">
+                            I am currently looking for MSc students in 2021. If you are interested in my research work, please send your CV and research proposal to liyang89 AT zju DOT edu DOT cn.
                         </p>
                     </div>
                 </div>
@@ -67,6 +71,39 @@
                             Currently, my focus is on model-free single object tracking and 3D reconstruction/fusion.
                         </p>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <h3>Selected Research Projects</h3>
+                        <div class="custom-container container">
+                            <div class="col-4 col-sm-4 col-xs-6"><img class="portrait img-responsive" src="files/example.gif"></div>
+                            <div class="desc col-8 col-sm-8 col-xs-6">
+                                <h4><b>Visual Object Tracking</b></h4> 
+                                <p>Given a video sequence and a selected target in the first frame, visual object tracking aims to track the target object robustly and accurately during the whole video sequence. We are interested in different geometric representations of the tracking algorithm. With various geometric representations, visual object tracking methods can be viewed as basic blocks for many high-level applications, such as surveillance, video editing/analysis, etc. </p>   
+                            </div>
+                        </div>
+
+                        <div class="custom-container container">
+                            <div class="col-4 col-sm-4 col-xs-6"><img class="portrait img-responsive" src="files/3dreconstruction.gif"></div>
+                            <div class="desc col-8 col-sm-8 col-xs-6">
+                                <h4><b>3D Motion Capture</b></h4> 
+                                <p>Taking one step forward, estimating the geometric representation of a visual object in the RGB-D sequence leads us to the 3D motion capture topic. It is highly related to 3D dynamic reconstruction, RGB-D fusion and 3D visual tracking. The algorithm outputs all geometric properties for every pixel in the sequence. It can be viewed as a fundamental 3D perception method which is very useful in AR/VR and robotics. The 3D reconstruction technique can also be applied to game/film making, geography, and so on.  </p>   
+                            </div>
+                        </div>
+
+                        <div class="custom-container container">
+                            <div class="col-4 col-sm-4 col-xs-6"><img class="portrait img-responsive" src="files/superfull.gif"></div>
+                            <div class="desc col-8 col-sm-8 col-xs-6">
+                                <h4><b>Interdisciplinary Projects</b></h4> 
+                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of computer vision-related interdisciplinary projects. </p>   
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -94,8 +131,8 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>Attribute-aware Pedestrian Detection in a Crowd</b> <br>
-                            Jialiang Zhang, Lixiang Lin, Yang Li, Yun-chen Chen, Jianke Zhu, Yao Hu, Steven C.H. Hoi<br>
-                            <i>Arxiv</i>, 2020<br>
+                            Jialiang Zhang, Lixiang Lin, Jianke Zhu, Yang Li, Yun-chen Chen, Yao Hu, Steven C.H. Hoi<br>
+                            <i>IEEE Trans. on Multimedia</i>, 2020<br>
                             [<a href="https://arxiv.org/abs/1910.09188">PDF</a>]
 			                      [<a href="https://github.com/kalyo-zjl/APD">CODE</a>]
                         </p>
@@ -117,7 +154,7 @@
                         <p class="pub">
                             <b>DeepFacade: A deep learning approach to facade parsing with symmetric loss</b> <br>
                             Hantang Liu, Yinghao Xu, Jialiang Zhang, Jianke Zhu, Yang Li, Steve C.H. Hoi<br>
-                            <i>IEEE Trans. Multimedia</i>, 2020<br>
+                            <i>IEEE Trans. on Multimedia</i>, 2020<br>
 			    [<a href="https://ieeexplore.ieee.org/document/8979370">PDF</a>]
                         </p>
                     </div>
@@ -236,14 +273,19 @@
                         <hr>
                     </div>
                 </div>
+
                 
                 <center>
-                    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=RCQ3&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg"></script>
+                    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg'></script>
+
+                    <a href='https://clustrmaps.com/site/h7fl'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg'/></a>
 
             </center>
 
         </main>
     </div>
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
 
+    <script type="text/javascript" id="clustrmaps" src="https//clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
 
 </body></html>
