--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                 
                 <center>
-                    <script type="text/javascript" id="clustrmaps" src="https//clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
+                    <script type="text/javascript" id="clustrmaps" src="clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
             </center>
 
         </main>
