--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="keywords" content="Yang Li">
         <meta name="description" content="Academic homepage of Yang Li">
-        <meta name="viewport" content="width=device-wdith; initial-scale=1.0;">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yang Li's personal homepage</title>
         <link href="css/main.css" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -276,7 +276,7 @@
 
                 
                 <center>
-                    <script type="text/javascript" id="clustrmaps" src="clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
+                    <script type="text/javascript" id="clustrmaps" src="https://clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
             </center>
 
         </main>
