turn into total viewer count mode

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 
                 
                 <center>
-                    <script type="text/javascript" id="clustrmaps" src="https://clustrmaps.com/map_v2.js?d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg&cl=ffffff&w=a"></script>
-            </center>
+                    <script type='text/javascript' id='clustrmaps' src='https://cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg'></script>
+                </center>
 
         </main>
     </div>
